@@ -1,5 +1,6 @@
 package uk.gov.hmcts.reform.prl.services.validators;
 
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -16,7 +17,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.enums.Event.OTHER_PEOPLE_IN_THE_CASE_REVISED;
@@ -26,10 +26,10 @@ import static uk.gov.hmcts.reform.prl.enums.YesOrNo.Yes;
 
 @Slf4j
 @Service
+@RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class OtherPeopleInTheCaseRevisedChecker implements EventChecker {
 
-    @Autowired
-    TaskErrorService taskErrorService;
+    public final TaskErrorService taskErrorService;
 
     @Override
     public boolean isFinished(CaseData caseData) {
@@ -39,7 +39,7 @@ public class OtherPeopleInTheCaseRevisedChecker implements EventChecker {
         if (othersToNotify.isPresent()) {
             List<PartyDetails> others = caseData.getOtherPartyInTheCaseRevised()
                 .stream().map(Element::getValue)
-                .collect(Collectors.toList());
+                .toList();
 
             if (others.isEmpty()) {
                 return false;
@@ -66,7 +66,7 @@ public class OtherPeopleInTheCaseRevisedChecker implements EventChecker {
         if (othersToNotify.isPresent()) {
             List<PartyDetails> others = caseData.getOtherPartyInTheCaseRevised()
                 .stream().map(Element::getValue)
-                .collect(Collectors.toList());
+                .toList();
 
             boolean started = others.stream().anyMatch(Objects::nonNull);
             if (started) {
